Fixes incorrectly rendering media sizes
- Removes unneeded gradient
- Reduces overlapping text size
- Increases header size to envelope all the content

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -68,6 +68,17 @@ body {
   box-shadow: 0px -1px 0px 0px rgb(177, 177, 177) inset, 0px 1px 0px 0px rgb(217, 217, 217);
 }
 
+@media (max-width: 767px) {
+  #header {
+    height: 147px;
+  }
+}
+
+@media (min-width: 767px) and (max-width: 979px) {
+  h1.usa-prays small.tablet-shrunk {
+    font-size: 12px;
+  }
+}
 #cc-logo {
   padding: 15px;
   Xposition: relative;
